--- a/UI/LopHoc/pnLocThu.form
+++ b/UI/LopHoc/pnLocThu.form
@@ -13,10 +13,10 @@
       </Border>
     </Property>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[347, 30]"/>
+      <Dimension value="[346, 30]"/>
     </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[347, 30]"/>
+      <Dimension value="[346, 30]"/>
     </Property>
   </Properties>
   <AuxValues>
@@ -35,37 +35,33 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
               <Component id="ckT2" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
               <Component id="ckT3" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
               <Component id="ckT4" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
               <Component id="ckT5" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
               <Component id="ckT6" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
-              <Component id="ckT7" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="7" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+              <Component id="ckT7" min="-2" pref="39" max="-2" attributes="0"/>
+              <EmptySpace pref="9" max="32767" attributes="0"/>
               <Component id="ckCn" min="-2" pref="39" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="ckT2" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="ckT3" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="ckT5" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="ckT6" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="ckT7" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="ckCn" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Component id="ckT4" min="-2" pref="25" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="ckT2" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                  <Component id="ckT3" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                  <Component id="ckT5" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="ckT6" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="ckT7" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+                  <Component id="ckCn" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+                  <Component id="ckT4" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
